--- a/RuleBasedSeniority.ipynb
+++ b/RuleBasedSeniority.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNG0iYoz2wIvSpM1ncIpQtd",
+      "authorship_tag": "ABX9TyPFm17e/p23rltZ8EHYtovQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -562,11 +562,11 @@
         "set(df[\"seniority\"].tolist())"
       ],
       "metadata": {
-        "id": "LrUO9dBLok5N",
-        "outputId": "4e2382cd-bf67-4bdc-f80e-5b77813974ad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LrUO9dBLok5N",
+        "outputId": "4e2382cd-bf67-4bdc-f80e-5b77813974ad"
       },
       "execution_count": 124,
       "outputs": [
@@ -588,12 +588,12 @@
         "df[df[\"person_id\"]==0]"
       ],
       "metadata": {
-        "id": "49IqrG8JqKTs",
-        "outputId": "f13d83d5-6789-4268-94eb-dec577a2abeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 237
-        }
+        },
+        "id": "49IqrG8JqKTs",
+        "outputId": "f13d83d5-6789-4268-94eb-dec577a2abeb"
       },
       "execution_count": 129,
       "outputs": [
@@ -955,7 +955,7 @@
         "outputId": "1f509a57-e518-4abc-d79a-7776729016d1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 423
+          "height": 597
         }
       },
       "execution_count": 122,
@@ -1799,17 +1799,6 @@
     {
       "cell_type": "code",
       "source": [
-        "BOW_seniority"
-      ],
-      "metadata": {
-        "id": "aU74ovIRtchF"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "titles = []\n",
         "corpus = []\n",
         "for title, cor in BOW_seniority.items():\n",
@@ -1825,14 +1814,15 @@
     {
       "cell_type": "code",
       "source": [
+        "# In the \"seniority.csv\" file, there's no title called \"professional\". But in the linkedin CV data, there's a seniority title called \"professional\".\n",
         "titles"
       ],
       "metadata": {
-        "id": "j1IHgwizvAUu",
-        "outputId": "c96af1a5-edbd-4edb-e0b9-2da9f04f210f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "j1IHgwizvAUu",
+        "outputId": "c96af1a5-edbd-4edb-e0b9-2da9f04f210f"
       },
       "execution_count": 145,
       "outputs": [
@@ -1907,14 +1897,33 @@
     {
       "cell_type": "code",
       "source": [
+        "top_n = 3\n",
+        "# Get indices of top N similarities per row (sorted descending)\n",
+        "# [:,::-1] reverses the indexes so they go from high to low\n",
+        "top_n_indices = np.argsort(similarity,axis=1)[:,-top_n:][:,::-1]\n",
+        "\n",
+        "top_n_labels = np.array(tfidf_df.index)[top_n_indices]\n",
+        "\n",
+        "df[\"secondPredict\"] = top_n_labels[:,1]\n",
+        "df[\"thirdPredict\"] = top_n_labels[:,2]"
+      ],
+      "metadata": {
+        "id": "6-U3bg3WzoMi"
+      },
+      "execution_count": 165,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "similarity.shape"
       ],
       "metadata": {
-        "id": "KhIG88POwLEz",
-        "outputId": "11027b3b-68e4-45e6-c664-9dc7408f3928",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KhIG88POwLEz",
+        "outputId": "11027b3b-68e4-45e6-c664-9dc7408f3928"
       },
       "execution_count": 156,
       "outputs": [
@@ -1938,7 +1947,7 @@
       "metadata": {
         "id": "49ILxjB_vU8A"
       },
-      "execution_count": 152,
+      "execution_count": 163,
       "outputs": []
     },
     {
@@ -1948,11 +1957,11 @@
         "len(df[df[\"seniority\"]==df[\"TFIDF-seniority\"]])/len(df)"
       ],
       "metadata": {
-        "id": "J6Mp8GDKraan",
-        "outputId": "f699c7d4-fff3-461e-9506-3cafff68f1f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "J6Mp8GDKraan",
+        "outputId": "f699c7d4-fff3-461e-9506-3cafff68f1f4"
       },
       "execution_count": 160,
       "outputs": [
@@ -1967,6 +1976,17 @@
           "execution_count": 160
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.to_csv('/content/DataScienceCapstoneProject/seniorityPredict.csv', sep = \";\")"
+      ],
+      "metadata": {
+        "id": "RKMhn94myU02"
+      },
+      "execution_count": 166,
+      "outputs": []
     },
     {
       "cell_type": "code",
